laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "38"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"laravel","namespace":"kubequest"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"laravel"}},"template":{"metadata":{"labels":{"app":"laravel"}},"spec":{"containers":[{"env":[{"name":"DB_CONNECTION","value":"mysql"},{"name":"DB_HOST","value":"mysql"},{"name":"DB_PORT","value":"3306"},{"name":"DB_DATABASE","valueFrom":{"secretKeyRef":{"key":"MYSQL_DATABASE","name":"mysql-secret"}}},{"name":"DB_USERNAME", [...]
  creationTimestamp: "2026-06-13T18:39:06Z"
  generation: 38
  name: laravel
  namespace: kubequest
  resourceVersion: "920858"
  uid: 09287e2e-22f7-4bad-9573-94ee22849f7e
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: laravel
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-06-14T00:50:19Z"
      labels:
        app: laravel
    spec:
      containers:
      - env:
        - name: DB_CONNECTION
          value: mysql
        - name: DB_HOST
          value: mysql
        - name: DB_PORT
          value: "3306"
        - name: DB_DATABASE
          valueFrom:
            secretKeyRef:
              key: MYSQL_DATABASE
              name: mysql-secret
        - name: DB_USERNAME
          valueFrom:
            secretKeyRef:
              key: MYSQL_USER
              name: mysql-secret
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: MYSQL_PASSWORD
              name: mysql-secret
        - name: ALLOW_ROOT
          value: "yes"
        image: maxi2/crementation-app:v8
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 1
        name: laravel
        ports:
        - containerPort: 80
          protocol: TCP
        resources: 
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      imagePullSecrets:
      - name: dockerhub-secret
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2026-06-13T23:55:38Z"
    lastUpdateTime: "2026-06-14T00:50:29Z"
    message: ReplicaSet "laravel-54977b5b87" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-06-16T17:55:45Z"
    lastUpdateTime: "2026-06-16T17:55:45Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 38
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
