laravel.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel
  namespace: kubequest
spec:
  replicas: 3
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
      - name: laravel
        image: bitnami/laravel:latest
        ports:
        - containerPort: 80
