pod.yaml
apiVersion: v1
kind:Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 2
  selector: 
    matchLabels: 
      app: hello-world# hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  replicas: 2               # <-- 2 pods identiques
  selector:
    matchLabels:
      app: hello-world      # <-- doit correspondre aux labels des pods
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
  containers:
    - name : nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
