mysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kubequest
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
